# semantic_segmentation

./: .gitmodules  CMakeLists.txt  package.xml
launch/: semantic_segmentation.launch
scripts/: semantic_segmentation_node.py
